projects/allow-apis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-apis
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 104.26.12.187/32 # data.vatsim.net
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 172.67.135.197/32 # api.vatusa.net
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 13.107.213.40/32 # aviationweather.gov
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 162.243.189.2/32 # digitalocean spaces
      ports:
        - protocol: TCP
          port: 443
